[package]
name = "db-node"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
redis = "0.25"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.3"
local-ip-address = "0.6.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4"] }
