[package]
name = "log-server"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.3"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tokio-postgres = {version = "0.7.10"}